DynamicReports Change Log
=========================

Changes in version 6.0.0 (2018-09-01)
---------------------------------------------------
 - Upgrade to JasperReports 6.7.0
 - Updated base java version to java 1.8

Changes in version 5.1.0 (2018-01-25)
---------------------------------------------------
 - upgrade to JasperReports 6.5.1
 - removed xhtml and excelapi exporter
 - removed thread safety in JasperCustomValues due to problems with memory leak   
 - fixed problem with chart styles in multi axis chart
 
Changes in version 5.0.0 (2017-01-27)
---------------------------------------------------
 - upgrade to JasperReports 6.4.0
 - upgrade to Java 1.7, DynamicReports is no longer compatible with Java 1.6
 - setPrintRepeatedValues method was added to TextFieldBuilder
 - ability to add item hyperlinks to chart series
 - minor bug fixes
 
Changes in version 4.1.1 (2016-07-28)
---------------------------------------------------
 - upgrade to JasperReports 6.2.2
 - added new types of component stretch type
 - minor bug fixes
 
Changes in version 4.1.0 (2016-02-11)
---------------------------------------------------
 - upgrade to JasperReports 6.2.0
 - xyList component, see ComponentsReport for an example
 
Changes in version 4.0.2 (2015-11-18)
---------------------------------------------------
 - upgrade to JasperReports 6.1.1
 - added support for QR Code barcode, see BarcodeReport for an example 
 - minor bug fixes and improvements
 
Changes in version 4.0.1 (2015-07-28)
---------------------------------------------------
 - upgrade to JasperReports 6.1.0
 - downgrade to iText 2.1.7 in pdf exporter
 - horizontal/vertical alignment was replaced by horizontal/vertical text alignment in text fields and horizontal/vertical image alignment in images
 - minor bug fixes
 
Changes in version 4.0.0 (2015-01-22)
---------------------------------------------------
 - upgrade to JasperReports 6.0.0
 - upgrade to iText 5.5.0 and POI 3.10.1 in exporters