@@ -5,6 +5,7 @@ Changes in version 6.0.0 (2018-09-01)
 ---------------------------------------------------
  - Upgrade to JasperReports 6.7.0
  - Updated base java version to java 1.8
+ - Upgrade to junit version 4.12, and related api changes
 
 Changes in version 5.1.0 (2018-01-25)
 ---------------------------------------------------
